syntax = "proto3";
package user;

service User {
    rpc UserPasswordSignIn(UserPasswordSignInReq) returns (UserPasswordSignInRsp) {}
    rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoRsp) {}
    rpc CheckUserToken(CheckUserTokenReq) returns (CheckUserTokenRsp) {}
}

message UserPasswordSignInReq {
    string mobile = 1;
    string password = 2;
}

message UserPasswordSignInRsp {
    string token = 1;
    string mobile = 2;
    string name = 3;
    bool result = 4;
}

message GetUserInfoReq {
    int64 user_id = 1;
    string session_key = 2;
}

message GetUserInfoRsp {
    string user_name = 1;
    string user_display_name = 2;
    string gender = 3;
    string mobile = 4;
    string signature = 5;
    string city     = 6;
    string province = 7;
    string country  = 8;
    string language = 9;
    string email = 10;
    bool   has_union_id = 11;
    string avatar   = 12;
    string logo     = 13;
    string reward_code = 14;
    int64  user_id = 15;
    string name = 16;
    string corporation = 17;
    string position = 18;
}

message CheckUserTokenReq {
    string token = 1;
}

message CheckUserTokenRsp {
    bool result = 1;
    int64 user_id = 2;
    string inst_id = 3;
    string mobile = 4;
}

// protoc -I. --micro_out=. --go_out=. *.proto
// then modify the name